--- a/khoBlog/templates/400.html
+++ b/khoBlog/templates/400.html
@@ -7,7 +7,7 @@
 
 {% block page_top_title %}
     <h2>Error 400
-        <a class="w3-right coolLinks" href="{% url 'latest' %}">
+        <a class="w3-right coolLinks" href="{% url 'blog:latest' %}">
             Latest Post
         </a>
     </h2>
