--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -119,7 +119,7 @@
                     Show HTML Elements outline
                 </button>
 
-                <form class="w3-bar-item w3-large" action="{% url 'search_results' %}" method="get">
+                <form class="w3-bar-item w3-large" action="{% url 'blog:search_results' %}" method="get">
                     <input name="q" type="text" placeholder="Search a post">
                 </form>
             </nav>
@@ -145,14 +145,14 @@
                                         {% if user.is_superuser %}
                                             <p>Hello <span class="superuser">{{ user.username }}</span> <small>(<a class="coolLinks" href="{% url 'account_logout' %}">Log out</a>)</small>
                                                 <span class="postsButtons">
-                                                    <a href="{% url 'post_new' %}"><span class="iconify" data-icon="bx:bx-list-plus" data-inline="false"></span></a>
-                                                    <a href="{% url 'post_draft_list' %}"><span class="iconify" data-icon="ic:outline-drafts" data-inline="false"></span></a>
-                                                    <a href="{% url 'post_private_list' %}"><span class="iconify" data-icon="cil:lock-locked" data-inline="false"></span></a>
+                                                    <a href="{% url 'blog:post_new' %}"><span class="iconify" data-icon="bx:bx-list-plus" data-inline="false"></span></a>
+                                                    <a href="{% url 'blog:post_draft_list' %}"><span class="iconify" data-icon="ic:outline-drafts" data-inline="false"></span></a>
+                                                    <a href="{% url 'blog:post_private_list' %}"><span class="iconify" data-icon="cil:lock-locked" data-inline="false"></span></a>
                                                 </span>
 
                                                 <span class="w3-margin categoryButtons">
-                                                    <a href="{% url 'category_new' %}"><span class="iconify" data-icon="carbon:category-new" data-inline="false"></span></a>
-                                                    <a href="{% url 'category_list' %}"><span class="iconify" data-icon="carbon:category" data-inline="false"></span></a>
+                                                    <a href="{% url 'blog:category_new' %}"><span class="iconify" data-icon="carbon:category-new" data-inline="false"></span></a>
+                                                    <a href="{% url 'blog:category_list' %}"><span class="iconify" data-icon="carbon:category" data-inline="false"></span></a>
                                                 </span>
 
                                                 <span class="adminButtons">
@@ -192,7 +192,7 @@
 
                 <footer class="w3-container w3-center w3-padding-16 w3-text-theme w3-theme-dark">
                     <div class="w3-row">
-                        <div class="w3-col l4 m5 w3-hide-small"><a href="{% url 'category_list' %}"
+                        <div class="w3-col l4 m5 w3-hide-small"><a href="{% url 'blog:category_list' %}"
                                 class="coolLinks">Category List</a></div>
 
                         <div class="w3-col l4 m2 s12">
@@ -200,7 +200,7 @@
                                     width="50" alt="Khodok's Logo" /></a>
                         </div>
 
-                        <div class="w3-col l4 m5 w3-hide-small"><a href="{% url 'latest' %}"
+                        <div class="w3-col l4 m5 w3-hide-small"><a href="{% url 'blog:latest' %}"
                                 class="coolLinks">Latest Post</a>
                         </div>
                     </div>
